--- a/proj3_app/templates/home.html
+++ b/proj3_app/templates/home.html
@@ -1,29 +1,65 @@
 {% extends "base_template.html" %}
+{% load static %}
 
 {% block content %}
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+{#    <script src="static/index.js"></script>#}
+
     <h2>Crime Report Home Page</h2>
 {#    {% for i in data %}#}
 {#    <p>{{ i.date }}{{ i.category }}{{ i.total }}</p>#}
 {#    {% endfor %}#}
-    <script type="text/javascript">
-      var crime_info=[];
-
-
-      $.ajax({
-            url: '/crimeinfo/',
-            type: 'GET',
-          dataType: 'json',
-          success: function(response) {
-              console.log(response);
-              crime_info=response;
-
-          },
-          error: function(response) {
-              console.log(response)
-          }
-
-      });
+{#    <script type="text/javascript">#}
+{#      var crime_info=[];#}
+{##}
+{##}
+{#      $.ajax({#}
+{#            url: '/crimeinfo/',#}
+{#            type: 'GET',#}
+{#          dataType: 'json',#}
+{#          success: function(response) {#}
+{#              console.log(response);#}
+{#              crime_info=response;#}
+{##}
+{#          },#}
+{#          error: function(response) {#}
+{#              console.log(response)#}
+{#          }#}
+{##}
+{#      });#}
+{#    </script>#}
+    <div id="container" style="width:100%; height:400px;"></div>
+    <script>
+    $(function () {
+    $('#container').highcharts({
+        chart: {
+            type: 'bar'
+        },
+        title: {
+            text: 'Fruit Consumption'
+        },
+        xAxis: {
+            categories: ['Apples', 'Bananas', 'Oranges']
+        },
+        yAxis: {
+            title: {
+                text: 'Fruit eaten'
+            }
+        },
+        series: [{
+            name: 'Jane',
+            data: [1, 0, 4]
+        }, {
+            name: 'John',
+            data: [5, 7, 3]
+        }]
+    });
+});
     </script>
+
+
 
 
 {% endblock %}
