--- a/proj3_app/templates/test2.html
+++ b/proj3_app/templates/test2.html
@@ -42,7 +42,10 @@
 .en-markup-crop-options div div:first-of-type {
     margin-left: 0px !important;
 }
-</style></head>
+</style>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+</head>
 
   <body>
 
@@ -94,7 +97,7 @@
 {#        <p>#}
 {#          <a class="btn btn-lg btn-primary" href="http://getbootstrap.com/components/#navbar" role="button">View navbar docs »</a>#}
 {#        </p>#}
-          <p>{% block content %}{% endblock content %}</p>
+          <p></p>
 
       </div>
 
@@ -106,9 +109,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
 {#    <script src="./Navbar Template for Bootstrap_files/jquery.min.js"></script>#}
 {#    <script src="./Navbar Template for Bootstrap_files/bootstrap.min.js"></script>#}
-  <script src="http://code.highcharts.com/highcharts.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-{#  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>#}
-  
+
 
 </body></html>
