--- a/proj3_app/templates/test3.html
+++ b/proj3_app/templates/test3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+{#<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>#}
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
 {#    <script type="text/javascript" src="js/exporting.js"></script>#}
     <script src="../../static/index.js"></script>
@@ -18,8 +18,8 @@
 {#  </script>#}
 {##}
 {#    <title></title>#}
-{#</head>#}
-{#<body>#}
+</head>
+<body>
 {#<div id="dialog" title="Basic dialog">#}
 {#  <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>#}
 {#</div>#}
@@ -35,31 +35,29 @@
   </ul>
 
         <div id="tabs-1">
+            
             <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+            test1
         </div>
 
 
         <div id="tabs-2">
 
             <div id="container2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-
-
         </div>
          <div id="tabs-3">
              <div id="container3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+             <p></p>
          </div>
 
-        </div>
          <div id="tabs-4">
              <div id="container4" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
          </div>
 
-        </div>
          <div id="tabs-5">
              <div id="container5" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
          </div>
 
-         </div>
          <div id="tabs-6">
              <div id="container6" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
          </div>
