--- a/proj3_app/templates/home.html
+++ b/proj3_app/templates/home.html
@@ -1,65 +1,65 @@
-{% extends "base_template.html" %}
-{% load static %}
-
-{% block content %}
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<!DOCTYPE html>
+<html>
+{% load staticfiles %}
+<head lang="en">
+    <meta charset="UTF-8">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="http://code.highcharts.com/highcharts.js"></script>
-{#    <script src="static/index.js"></script>#}
+{#<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>#}
+    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+{#    <script type="text/javascript" src="js/exporting.js"></script>#}
+    <script src="../../static/index.js"></script>
 
-    <h2>Crime Report Home Page</h2>
-{#    {% for i in data %}#}
-{#    <p>{{ i.date }}{{ i.category }}{{ i.total }}</p>#}
-{#    {% endfor %}#}
-{#    <script type="text/javascript">#}
-{#      var crime_info=[];#}
-{##}
-{##}
-{#      $.ajax({#}
-{#            url: '/crimeinfo/',#}
-{#            type: 'GET',#}
-{#          dataType: 'json',#}
-{#          success: function(response) {#}
-{#              console.log(response);#}
-{#              crime_info=response;#}
-{##}
-{#          },#}
-{#          error: function(response) {#}
-{#              console.log(response)#}
-{#          }#}
-{##}
-{#      });#}
-{#    </script>#}
-    <div id="container" style="width:100%; height:400px;"></div>
-    <script>
-    $(function () {
-    $('#container').highcharts({
-        chart: {
-            type: 'bar'
-        },
-        title: {
-            text: 'Fruit Consumption'
-        },
-        xAxis: {
-            categories: ['Apples', 'Bananas', 'Oranges']
-        },
-        yAxis: {
-            title: {
-                text: 'Fruit eaten'
-            }
-        },
-        series: [{
-            name: 'Jane',
-            data: [1, 0, 4]
-        }, {
-            name: 'John',
-            data: [5, 7, 3]
-        }]
-    });
-});
-    </script>
+</head>
+<body>
+
+<h1>San Francisco Crime Data</h1>
+    <div id="tabs">
+        <ul>
+    <li><a href="#tabs-1">Assault</a></li>
+    <li><a href="#tabs-2">Burglary</a></li>
+    <li><a href="#tabs-3">Drugs</a></li>
+    <li><a href="#tabs-4">Robbery</a></li>
+    <li><a href="#tabs-5">Vehicle Theft</a></li>
+    <li><a href="#tabs-6">Theft</a></li>
+    <li><a href="#tabs-7">About</a></li>
+
+  </ul>
+
+        <div id="tabs-1">
+
+            <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+
+        </div>
 
 
+        <div id="tabs-2">
 
+            <div id="container2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+        </div>
+         <div id="tabs-3">
+             <div id="container3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+             <p></p>
+         </div>
 
-{% endblock %}
+         <div id="tabs-4">
+             <div id="container4" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+         </div>
+
+         <div id="tabs-5">
+             <div id="container5" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+         </div>
+
+         <div id="tabs-6">
+             <div id="container6" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+         </div>
+        <div id="tabs-7">
+             <p>This application has data from 1 JAN 2014 to 8 AUG 2014. The data source is <a href="https://data.sfgov.org/Public-Safety/SFPD-Reported-Incidents-2003-to-Present/dyj4-n68b">here.</a> </p>
+
+            <p>Any questions? Please write jcunanan@engineeralum.berkeley.edu. </p>
+         </div>
+    </div>
+</body>
+</html>
